# OpenCV_Image_Fusion

./: .gitignore  CMakeLists.txt  README.md
Inc/: run_statistic.h
Src/: main.cpp  run_statistic.c
